# Compulsory-Project-to-be-Submitted-by-the-Students

./: main.py  password_strenght_checker.py  pyproject.toml
Count_Down_Timer/: main.py  pyproject.toml
Hangman_game/: hangman.py  main.py
MadLibs/: main.py  pyproject.toml
hangman/: hangman.py  pyproject.toml
number_guessing_game/: game.py
number_guessing_game_computer/: main.py
