[project]
name = "compulsory-project-to-be-submitted-by-the-students"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["MadLibs", "number_guessing_game_computer", "Hangman_game", "Count_Down_Timer", "Count_Down_Timer/Password_Generator", "Password_Generator"]
